fixed z-index to separators

--- a/src/block-components/separator/style.scss
+++ b/src/block-components/separator/style.scss
@@ -2,7 +2,7 @@
 
 .stk-block {
 	&:is(.stk-has-top-separator, .stk-has-bottom-separator) {
-		> *:not(.stk-video-background) { // Don't change the order of any video backgrounds, they stay at the back.
+		> *:not(.stk-video-background, .stk-separator) { // Don't change the order of any video backgrounds, they stay at the back.
 			z-index: 2;
 		}
 
@@ -50,7 +50,7 @@
 		pointer-events: none;
 		inset: -1px 0; // -1px on the sides might make horizontal scrollbars appear.
 		overflow: hidden;
-
+		z-index: 1;
 		svg {
 			filter: drop-shadow(0px 2px 20px rgba(153, 153, 153, 0.2));
 			left: 0;
